Adding nwe index files

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <H1>Well welcome Boss !</H1>
+
+
+        <p>Euro &euro;</p> <p> &trade;;</p> <p> &copy;</p>
     </body>
 </html>
