I wanted those symbols to be spaced up a bit

--- a/home.html
+++ b/home.html
@@ -8,8 +8,6 @@
         <br>
         <img src="Ernesto Nkunzimana.jpg" alt="Ernesto Picture">
         <h2>This is the image of me trying Github Recorgnition system</h2>
-
-
-        <p>Euro &euro;</p> <p> &trade;;</p> <p> &copy;</p>
+        <p>Euro &euro;</p> <br> <p> &trade;;</p> <br> <p> &copy;</p>
     </body>
 </html>
