--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <H1>Well welcome To your Homepage !</H1>
         <br>
         <img src="Ernesto Nkunzimana.jpg" alt="Ernesto Picture">
-        <h2>This is the image of me trying Github Recorgnition system</h2>
+        <h2 style:"color=red">This is the image of me trying Github Recorgnition system</h2>
 
 
         <p>Euro &euro;</p> <p> &trade;;</p> <p> &copy;</p>
