Added new branch called master

--- a/home.html
+++ b/home.html
@@ -2,12 +2,19 @@
 <html>
     <head>
         <title>Home Page</title>
+        <style>
+
+            h1,h2{
+                font-size: 30px;
+                color: darkgreen;
+            }
+        </style>
     </head>
     <body>
         <H1>Well welcome To your Homepage !</H1>
         <br>
         <img src="Ernesto Nkunzimana.jpg" alt="Ernesto Picture">
-        <h2 style="color:red">This is the image of me trying Github Recorgnition system</h2>
+        <h2>This is the image of me trying Github Recorgnition system</h2>
         
 
 
